Fixing grids on small screen of next steps section

--- a/assets/scss/components/_sections.scss
+++ b/assets/scss/components/_sections.scss
@@ -571,6 +571,10 @@ body.sm-loaded {
       }
     }
 
+    .background-grid {
+      height: 100%;
+    }
+
     .section-title {
       margin: 0;
       @include h1;
